# canvas-completer

./: .gitignore  README.md  canvas_assignments.py  canvas_browser.py  content_extractor.py  main.py  pyproject.toml  requirements.txt
canvas_completer/: __init__.py  ai_detector.py  canvas_assignments.py  canvas_browser.py  content_extractor.py  main.py
