[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canvas-completer"
version = "0.1.0"
description = "A CLI tool to manage Canvas LMS assignments with AI-assisted homework help"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Matt Miller", email = "matt@miller-media.com"}
]
keywords = ["canvas", "lms", "homework", "assignments", "education", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "playwright>=1.40.0",
    "rich>=13.0.0",
    "pypdf>=3.0.0",
    "youtube-transcript-api>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/MillerMedia/canvas-completer"
Repository = "https://github.com/MillerMedia/canvas-completer"
Issues = "https://github.com/MillerMedia/canvas-completer/issues"

[project.scripts]
canvas-completer = "canvas_completer.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["canvas_completer*"]
